syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.poc.models";

// Business object
message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  ProductType productType = 4;
}

enum ProductType {
  SOFTWARE = 0;
  HARDWARE = 1;
  MEDIA = 2;
}

// Request DTO
message ProductRequestDto {
  ProductType productType = 1;
}

// Response DTO
message ProductResponseDto {
  repeated Product product = 1;
}

// Service
service ProductService {
  rpc getProduct(ProductRequestDto) returns (ProductResponseDto);
}